# CEIA_PLN_Desafios

./: .gitignore  README.md  pyproject.toml
Notebooks/: Desafio_1.ipynb  Desafio_2.ipynb  Desafio_3.ipynb
