[project]
name = "ceia-pln-desafios"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gdown>=5.2.0",
    "gensim>=4.3.3",
    "matplotlib>=3.10.9",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "plotly>=6.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
]
